# DoorMonitor

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  sdkconfig
components/core_logic/: CMakeLists.txt  dummy.cpp
components/core_logic/docs/: Todos.org
components/core_logic/include/: RingBuffer.h  SharedRingContext.h
docs/: I2S.org  Roadmap.org  coroutine_blog.org  coroutines.org
host_tests/: CMakeLists.txt  CMakePresets.json  test_ringbuffer.cpp  test_semaphore.cpp
main/: App.cpp  CMakeLists.txt  GPIOTask.cpp  InfraredTask.cpp  ListenerTask.cpp  NoiseDetectionTask.cpp  SignalProcessor.cpp  TimeSyncTask.cpp  WebSocketClient.cpp  WifiConnectTask.cpp  idf_component.yml  utils.cpp
main/include/: GPIOTask.h  ListenerTask.h  NoiseDetectionTask.h  SensorTask1.h  SignalEvaluator.h  SignalProcessor.h  TaskTemplate.h  TimeSyncTask.h  WebsocketClient.h  WebsocketParser.h  WifiConnectTask.h  helpers.h  utils.h
